--- a/redis.yaml
+++ b/redis.yaml
@@ -1,14 +1,16 @@
-apiVersion: v1
 kind: Namespace
+apiVersion: v1
 metadata:
   name: web
 
 
 
+---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: namespace
+  name: redis
+  namespace: web
 spec:
   containers:
   - name: redis2
